# hkex-prospectus-scraper

./: .gitignore  pyproject.toml
docs/: l0-acceptance-playbook.md
docs/superpowers/specs/: 2026-05-24-l1-report-validation-design.md
src/hk_ipo/: __init__.py  config.py  logging_setup.py
src/hk_ipo/l0/: __init__.py  __main__.py  discovery.py  downloader.py  filter.py  manifest.py  models.py  orchestrator.py
src/hk_ipo/l1/: _http.py  cli.py  gaps_writer.py  manifest_reader.py  models.py  pipeline.py  reconciler.py  source_aastocks.py  source_hkex_stats.py  source_wikipedia.py  summary_writer.py
tests/: conftest.py  test_bootstrap.py  test_l0_config.py  test_l0_discovery.py  test_l0_discovery_integration.py  test_l0_downloader.py  test_l0_filter.py  test_l0_golden_fixtures.py  test_l0_manifest.py  test_l0_models.py  test_l0_orchestrator.py  test_l1_gaps_writer.py  test_l1_http.py  test_l1_manifest_reader.py  test_l1_models.py  test_l1_pipeline.py  test_l1_reconciler.py  test_l1_source_aastocks.py  test_l1_source_hkex_stats.py  test_l1_source_wikipedia.py  test_l1_summary_writer.py  test_logging_setup.py
tests/blackbox/: conftest.py  stub_hkex_server.py  test_l0_cli_blackbox.py  test_l1_cli_blackbox.py
tests/blackbox/fixtures/: discovery_empty.json  discovery_html_fallback.html  discovery_window_2024_01.json  discovery_window_2024_01_multi.json
tests/cassettes/: README.md  test_l0_discovery_replays_recorded_hkex_window.yaml
tests/e2e/: test_l0_e2e.py
tests/fixtures/: l0_known_ipos.json  sample_manifest.json
tests/fixtures/l1/: aastocks_empty.html  (+4 more)
