[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-ipo"
version = "0.1.0"
description = "HKEX IPO prospectus auto-downloader (L0)"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "selectolax>=0.3.21",
  "tenacity>=8.2,<10",
  "portalocker>=2.8,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-recording>=0.13",
  "respx>=0.21",
  "vcrpy>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "e2e: end-to-end tests that hit the real HKEX network (deselect with '-m \"not e2e\"')",
  "blackbox: black-box CLI tests that invoke the package via subprocess",
  "slow: tests that take longer than typical unit/integration tests",
]
addopts = "-m 'not e2e and not blackbox' -ra"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:vcr.*",
]
